[package]
name = "solcarlease"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { version = "1.18.11", features = ["program"] }
solana-client = "1.18.14"
borsh = "1.5.0"
thiserror = "1.0.59"
arrayref = "0.3.7"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
gethostname = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[package.metadata]
solana-bpf-elf-features = ["c", "bpf", "program"]
